Support for Gradle 8.14.3 and Java 17+